--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,5 +35,5 @@
 
     HTML body tags - contains content from page
 
-    Handlebars {{{}}} - special placeholder for template -->
+    Handlebars {{! placeholder {{{}}}    }} - special placeholder for template -->
     
